@@ -19,11 +19,15 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
+from StringIO import StringIO
+import re
+import sys
 import types
 import unittest
 
 from duplicity import manifest
 from duplicity import path
+
 from . import UnitTestCase
 
 
@@ -92,13 +96,38 @@ class ManifestTest(UnitTestCase):
         m.set_files_changed_info([])
 
         s = m.to_string()
-        # print "---------\n%s\n---------" % s
         assert s.lower().startswith("hostname")
         assert s.endswith("\n")
 
         m2 = manifest.Manifest().from_string(s)
         assert m == m2
 
+    def test_corrupt_filelist(self):
+        vi1 = manifest.VolumeInfo()
+        vi1.set_info(3, ("hello",), None, (), None)
+        vi2 = manifest.VolumeInfo()
+        vi2.set_info(4, ("goodbye", "there"), None, ("aoeusht",), None)
+        vi3 = manifest.VolumeInfo()
+        vi3.set_info(34, (), None, (), None)
+        m = manifest.Manifest()
+        for vi in [vi1, vi2, vi3]:
+            m.add_volume_info(vi)
+
+        self.set_global('local_path', path.Path("Foobar"))
+        m.set_dirinfo()
+        m.set_files_changed_info([
+            ('one', 'new'),
+            ('two', 'changed'),
+            ('three', 'new'),
+            ])
+
+        # build manifest string
+        s = m.to_string()
+
+        # make filecount higher than files in list
+        s2 = re.sub('Filelist 3', 'Filelist 5', s)
+        m2 = manifest.Manifest().from_string(s2)
+        assert hasattr(m2, 'corrupt_filelist')
 
 if __name__ == "__main__":
     unittest.main()
